hotfix overlapping string in resultbox for twenty solver

--- a/src/public/static/css/styles.css
+++ b/src/public/static/css/styles.css
@@ -183,7 +183,6 @@ main {
 
 .calculation-result{
     min-height: 400px;
-    max-height: 600px;
     display: flex;
     flex-direction: column;
     padding-left: 50px;
